# huinya

./: .travis.yml
Differential_equation/: CMakeLists.txt  main.c
Differential_equation/include/: Analysis.h  Data.h  Files.h  Logic.h  Minunit.h  SpecialPoints.h  Structures.h  Test_SpecialPoins.h
Differential_equation/src/: Analysis.c  Files.c  Logic.c  SpecialPoins.c  Structures.c  Test_SpecialPoints.c
solver/: .travis.yml  main.c
solver/include/: Tests.h
solver/src/: SingularPoints.c  Test_SingularPoints.c
